lib/dmp40/TLDFM.h

ViStatus _VI_FUNC TLDFM_get_feedback_voltage          (ViSession instrumentHandle,
                                                       ViReal64* pFeedbackVoltage);
ViStatus _VI_FUNC TLDFM_get_feedback_current          (ViSession instrumentHandle,					  
                                                       ViReal64* pFeedbackCurrent);
ViStatus _VI_FUNC TLDFM_get_feedback                  (ViSession instrumentHandle,
                                                       ViReal64* pFeedbackVoltage,
                                                       ViReal64* pFeedbackCurrent);
ViStatus _VI_FUNC TLDFM_get_monitor_voltage           (ViSession instrumentHandle,
                                                       ViReal64* pMonitorVoltage);
ViStatus _VI_FUNC TLDFM_get_temperatures              (ViSession instrumentHandle,
                                                       ViReal64* pIC1Temperatur,
                                                       ViReal64* pIC2Temperatur,
                                                       ViReal64* pMirrorTemperatur,
                                                       ViReal64* pElectronicTemperatur);