src/main/java/dmp40j/bindings/TLDFM_64Library.java

	/**
	 * Original signature : <code>ViStatus TLDFM_get_feedback_voltage(ViSession, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:233</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_feedback_voltage(@org.bridj.ann.CLong long instrumentHandle, Pointer<Double > pFeedbackVoltage) {
		return TLDFM_get_feedback_voltage(instrumentHandle, Pointer.getPeer(pFeedbackVoltage));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_feedback_voltage(@org.bridj.ann.CLong long instrumentHandle, @Ptr long pFeedbackVoltage);
	/**
	 * Original signature : <code>ViStatus TLDFM_get_feedback_current(ViSession, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:236</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_feedback_current(@org.bridj.ann.CLong long instrumentHandle, Pointer<Double > pFeedbackCurrent) {
		return TLDFM_get_feedback_current(instrumentHandle, Pointer.getPeer(pFeedbackCurrent));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_feedback_current(@org.bridj.ann.CLong long instrumentHandle, @Ptr long pFeedbackCurrent);
	/**
	 * Original signature : <code>ViStatus TLDFM_get_feedback(ViSession, ViReal64*, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:239</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_feedback(@org.bridj.ann.CLong long instrumentHandle, Pointer<Double > pFeedbackVoltage, Pointer<Double > pFeedbackCurrent) {
		return TLDFM_get_feedback(instrumentHandle, Pointer.getPeer(pFeedbackVoltage), Pointer.getPeer(pFeedbackCurrent));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_feedback(@org.bridj.ann.CLong long instrumentHandle, @Ptr long pFeedbackVoltage, @Ptr long pFeedbackCurrent);
	/**
	 * Original signature : <code>ViStatus TLDFM_get_monitor_voltage(ViSession, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:243</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_monitor_voltage(@org.bridj.ann.CLong long instrumentHandle, Pointer<Double > pMonitorVoltage) {
		return TLDFM_get_monitor_voltage(instrumentHandle, Pointer.getPeer(pMonitorVoltage));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_monitor_voltage(@org.bridj.ann.CLong long instrumentHandle, @Ptr long pMonitorVoltage);
	/**
	 * Original signature : <code>ViStatus TLDFM_get_temperatures(ViSession, ViReal64*, ViReal64*, ViReal64*, ViReal64*)</code><br>
	 * <i>native declaration : lib\dmp40\TLDFM.h:246</i>
	 */
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	public static long TLDFM_get_temperatures(@org.bridj.ann.CLong long instrumentHandle, Pointer<Double > pIC1Temperatur, Pointer<Double > pIC2Temperatur, Pointer<Double > pMirrorTemperatur, Pointer<Double > pElectronicTemperatur) {
		return TLDFM_get_temperatures(instrumentHandle, Pointer.getPeer(pIC1Temperatur), Pointer.getPeer(pIC2Temperatur), Pointer.getPeer(pMirrorTemperatur), Pointer.getPeer(pElectronicTemperatur));
	}
	@Convention(Convention.Style.StdCall) 
	@org.bridj.ann.CLong 
	protected native static long TLDFM_get_temperatures(@org.bridj.ann.CLong long instrumentHandle, @Ptr long pIC1Temperatur, @Ptr long pIC2Temperatur, @Ptr long pMirrorTemperatur, @Ptr long pElectronicTemperatur);
}
